src/test/deca/context/valid/created/decl-float-var-noinit.deca
//Description :
// Declaration d'une variable float sans initialisation
//
// Resultats :
// 


{
    float x;
}
