src/test/deca/context/invalid/created/method_not_found2.deca
//Description :
// Test d'une methode non def
//
// Resultats :
// Erreur


class Premiere {

}

class Second {

  void method(){
  Premiere prem = new Premiere();
  prem.existepas();
  }
}

{
}
